--- a/pinch-index-draft.html
+++ b/pinch-index-draft.html
@@ -21,7 +21,7 @@
 			<p><span style="font-family:Times New Roman,Times,serif;"><span style="font-size:26px;"><a href="https://tinmitt.bandcamp.com" target="_blank">STREAM AND DOWNLOAD</a><br />
 			<br />
 			<br />
-			<a href="pinch-liner-notes-draft.html"><strong>LINER NOTES:</strong> READ ABOUT THE ALBUM AND THE ARTISTS!</a><br />
+			<a href="pinchnotes.html"><strong>LINER NOTES:</strong> READ ABOUT THE ALBUM AND THE ARTISTS!</a><br />
 			<br />
 			<br />
 			BUY A CASSETTE TAPE</span></span></p>
