--- a/pinchnotes.html
+++ b/pinchnotes.html
@@ -743,7 +743,7 @@
 		<tr>
 			<td>
 			<p style="text-align: center;"><span style="font-family:Times New Roman,Times,serif;"><b>Runtime: 1:00<br />
-			Written and produced by The Holographic Sticker Club</b></span></p>
+			Produced by EN'B and Alienood</b></span></p>
 			</td>
 		</tr>
 		<tr>
