--- a/pinchnotes.html
+++ b/pinchnotes.html
@@ -832,7 +832,7 @@
 			<p><a href="https://tildas.org/" target="_blank">https://tildas.org/</a></p>
 
 			<p><strong>Any thoughts?</strong><br />
-			&quot;. . . its atypical in that its built largely by recording takes of improvisation. normally our process is to compose every detail, with maybe some tiny extra overdubs. also, it was only 1 take on the vocals.&quot;</p>
+			&quot;its atypical in that its built largely by recording takes of improvisation. normally our process is to compose every detail, with maybe some tiny extra overdubs. also, it was only 1 take on the vocals.&quot;</p>
 			</td>
 		</tr>
 	</tbody>
