--- a/pinchnotes.html
+++ b/pinchnotes.html
@@ -783,6 +783,12 @@
 			Written and produced by Fabian Meister</b></span></p>
 			</td>
 		</tr>
+		<tr>
+			<td>
+			<p><span style="font-family:Times New Roman,Times,serif;"><a href="https://https://www.youtube.com/channel/UC4s46cz8P5RjEIu2aCwirog" target="_blank">Fabian Meister on YouTube</a><br />
+			<a href="https://https://www.instagram.com/fabianshideout/" target="_blank">Fabian Meister on Instagram</a></span></p>
+			</td>
+		</tr>
 	</tbody>
 </table>
 <!--TRACKLIST BUTTON-->
