--- a/pinchnotes.html
+++ b/pinchnotes.html
@@ -785,8 +785,8 @@
 		</tr>
 		<tr>
 			<td>
-			<p><span style="font-family:Times New Roman,Times,serif;"><a href="https://https://www.youtube.com/channel/UC4s46cz8P5RjEIu2aCwirog" target="_blank">Fabian Meister on YouTube</a><br />
-			<a href="https://https://www.instagram.com/fabianshideout/" target="_blank">Fabian Meister on Instagram</a></span></p>
+			<p><span style="font-family:Times New Roman,Times,serif;"><a href="https://www.youtube.com/channel/UC4s46cz8P5RjEIu2aCwirog" target="_blank">Fabian Meister on YouTube</a><br />
+			<a href="https://www.instagram.com/fabianshideout/" target="_blank">Fabian Meister on Instagram</a></span></p>
 			</td>
 		</tr>
 	</tbody>
