--- a/pinch-index-draft.html
+++ b/pinch-index-draft.html
@@ -24,7 +24,7 @@
 			<a href="pinchnotes.html"><strong>LINER NOTES:</strong> READ ABOUT THE ALBUM AND THE ARTISTS!</a><br />
 			<br />
 			<br />
-			BUY A CASSETTE TAPE</span></span></p>
+			<a href="https://tinmitt.bandcamp.com" target="_blank">BUY A CASSETTE TAPE</a></span></span></p>
 			</td>
 		</tr>
 		<tr>
