--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 			</td>
 		</tr>
 		<tr>
-			<td bgcolor="ffffff" style="text-align: center;"><img alt="" src="https://f4.bcbits.com/img/a3653462931_10.jpg" style="width: 350px; height: 350px;" /></td>
+			<td bgcolor="ffffff" style="text-align: center;"><img alt="" src="pinchartwork.png" style="width: 350px; height: 350px;" /></td>
 			<td bgcolor="ffffff" style="text-align: center;">
 			<p><span style="font-family:Times New Roman,Times,serif;"><span style="font-size:26px;"><a href="https://tinmitt.bandcamp.com" target="_blank">STREAM AND DOWNLOAD</a><br />
 			<br />
