--- a/pinchnotes2.html
+++ b/pinchnotes2.html
@@ -303,7 +303,7 @@
 		</tr>
 		<tr>
 			<td>
-<center><iframe style="border: 0; width: 100%; height: 42px;" src="https://bandcamp.com/EmbeddedPlayer/album=3560979890/size=small/bgcol=ffffff/linkcol=0687f5/track=145282555/transparent=true/" seamless><a href="https://tinmitt.bandcamp.com/album/pinch">PINCH by Sabrina Jr.</a></iframe></center>
+<iframe style="border: 0; width: 100%; height: 42px;" src="https://bandcamp.com/EmbeddedPlayer/album=3560979890/size=small/bgcol=ffffff/linkcol=0687f5/track=145282555/transparent=true/" seamless><a href="https://tinmitt.bandcamp.com/album/pinch">PINCH by Sabrina Jr.</a></iframe>
         		<p style="text-align: center;"><span style="font-family:Times New Roman,Times,serif;"><b>Runtime: 1:00</b><br />
 			<b>Written by Mickey Dehn and Jack Pinder</b><br />
 			Jack Pinder - vocals and guitar<br />
