--- a/pinchnotes.html
+++ b/pinchnotes.html
@@ -460,18 +460,13 @@
 			&quot;In alchemy, alkahest was a theoretical &quot;universal solvent&quot; that could break down anything into its core elements. The entire process of writing this song was not too unlike an alchemical process. And in a sense, while writing this song I learned how to break down various musical aspects into their core elements. I can see the code in the Matrix and I don&#39;t know if I can go back.<br />
 			<br />
 			<strong>(Okay, feel free to SKIP THIS PART)</strong><br />
-			Deep wizard-brained THEORY ANALYSIS for the true freaks: In lieu of lyrics, and in the interest of transparency, here&#39;s an overview of the dense structure of this track. It&#39;s totally reasonable if you don&#39;t understand any this advanced turbo-nerd nonsense. But I hope it can inspire/inform anyone who wants to learn more. Feel free to hit me up if you wanna talk more about this stuff! I promise I also like writing simple pop music I swear!<br />
-			<br />
-			METER: The intro is in 4/4, then breaks down to a 6/4 groove, followed by a back-and-forth call and response between the established 6/4 rhythm (guitar + banjo lines) and the established 4/4 rhythm (horn lines). After the organ transition, it all melds together into a stable 6/4 (where the horns and strings join together).&nbsp;<br />
-			<br />
-			KEY/MODES: The beginning is just in Ab dorian (the second mode of Gb major). But in the second half, the song goes through several mode changes. Essentially, each time there&#39;s a new chord in the chord progression, it acts as an anchor and tonal center for a new mode/scale that the melody and bass follow. This is directly influenced by jazz theory techniques (particularly chord-scale theory) but used compositionally instead of improvisationally. These modal changes happen fluidly - often well before their connected chord shows up, so the changes can be hard to spot. It was all written linearly - building the chord progression was informed by the modes I was using, and visa versa. There were several layers of internal logic going on that I&#39;m not going to go into but mostly amount to &quot;switch out the expected mode for one that&#39;s a note or two different, and then live in that mode&#39;s world instead&quot;. If you want to follow the chord changes, listen for Greg&#39;s autoharp (thanks again Greg! I just wanted to steal a little bit of Moth Broth&#39;s magic)<br />
-			<br />
+			Deep wizard-brained THEORY ANALYSIS for the true freaks: The beginning is just in Ab dorian (the second mode of Gb major). But in the second half, the song goes through several mode changes. Essentially, each time there&#39;s a new chord in the chord progression, it acts as an anchor and tonal center for a new mode/scale that the melody and bass follow. This is directly influenced by jazz theory techniques (particularly chord-scale theory) Some of these modal changes happen fluidly, before their associated chord. It was all written linearly. Listen for Greg's autoharp for the chords (thanks again Greg for letting me steal a little Moth Broth magic). Meter-wise the first section is in 4/4, the second switches back and forth between 6/4 (banjo) and 4/4 (horns) and by the end it all melds into 6/4.
+			<br><br>
 			The chord progression (and modes):<br />
 			Abm (Ab dorian) B (B lydian) Gb (Gb lydian) Ab (Ab mixolydian)<br />
 			Ebm7 (Eb dorian) Bbm (Bb phrygian b4) Bm (Bb harmonic major) Db (Db mixolydian).<br />
-			You could also think of it as just 3 key changes instead (Ab dorian, Ab mixo, Bb phrygian b4) or something.<br />
-			<br />
-			At least, that&rsquo;s how I was thinking about it when I wrote it. You could interpret it a bunch of different ways probably. Listen... after a certain point I just let the song go where it wanted to go and I was no longer in control. Golly, okay, thanks for reading, I hope someone found this interesting???&quot;</p>
+			You could also think of it as just 3 key changes instead (Ab dorian, Ab mixo, Bb phrygian b4) or something.
+			</p>
 			</td>
 		</tr>
 	</tbody>
