--- a/pinchnotes.html
+++ b/pinchnotes.html
@@ -270,7 +270,7 @@
 			<em>(available on purchased digital copy and cassette release)</em><br />
 			<span style="font-size:18px;"><strong>B*01.</strong> <a href="#b1">:loading: - take it / you failed</a><br />
 			<strong>B*02.</strong> <a href="#b2">Magic Item - Pinch</a><br />
-			<strong>B*03.</strong> <a href="#b3">Bingo Night at Pinch Palace</a><br />
+			<strong>B*03.</strong> <a href="#b3">Eli & The Bingo Balls - Bingo Night at Pinch Palace</a><br />
 			<strong>B*04.</strong> <a href="#b4">Dominique Diglio - Crab Song</a></span></p>
 			</td>
 		</tr>
